--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>GPT-3</title>
+    <title>Alex Soares</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Você precisa habilitar o JavaScript para utilizar este site.</noscript>
     <div id="root"></div>
   </body>
 </html>
